Added smooth scrolling and footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
+<a name="top"></a>
 <nav class="navbar navbar-expand-md navbar-light bg-light">
 	<div class="container-fluid">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -20,17 +21,17 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Home</a>
-				</li>
-				<li class="nav-item">
 					<a class="nav-link" href="#about">About</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#projects">Projects</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="#contact">Contact</a>
+				</li>
+				<li class="nav-item">
 					<button class="resume-btn">
-						<a class="nav-link" href="locbuiresume.pdf" target="_blank">Open Resume</a>
+						<a class="nav-link" href="resume.pdf" target="_blank">Open Resume</a>
 					</button>
 				</li>
 			</ul>
@@ -43,7 +44,7 @@
 	<div class="centered carousel-caption">
 		<div>
 			<h1 class="display-3">Loc Bui</h1>
-			<h5>Software Engineer | Front-end Developer</h5>
+			<h5 class="display-6">Software Engineer | Front-end Developer</h5>
 			<a href="#contact" class="btn btn-primary btn-lg contact-btn">Get In Touch!</a>
 		</div>
 	</div>
@@ -60,7 +61,7 @@
 <div class="container-fluid padding">
 	<div class="row">
 		<div class="col-md-12 col-lg-6 about-content">
-			<p class="lead">Hi! My name is Loc Bui. I'm a software engineer based in Seattle, WA specializing in developing exceptional, high-quality, user friendly websites and web applications that provide intuitive user interfaces with efficient and modern backends.</p>
+			<p class="lead">Hi! My name is Loc Bui. I'm a software engineer based in Seattle, WA specializing in developing high-quality, user friendly, efficient websites and web applications. I love spending times on creating new features, fixing details and optimizing web apps.</p>
 			<p class="lead">I graduated from University of Washington Tacoma in 2017 with a Bachelor Degree in Computer Science and System. I've been working as a front-end developer for the last 2 years. I'm also actively looking for new opportunities in Software Development Engineer position.</p>
 			<p class="lead">Here are a few technologies I've been working with recently:</p>
 			<div class="row">
@@ -76,6 +77,9 @@
 							<h6>Redux</h6>
 						</li>
 						<li>
+							<h6>Node.js</h6>
+						</li>
+						<li>
 							<h6>HTML5</h6>
 						</li>
 						<li>
@@ -85,6 +89,9 @@
 				</div>
 				<div class="skill-list">
 					<ul>
+						<li>
+							<h6>Java Spring</h6>
+						</li>
 						<li>
 							<h6>RESTful APIs</h6>
 						</li>
@@ -236,6 +243,17 @@
 		</div>
 	</div>
 </div>
+
+<footer>
+	<div class="container-fluid padding">
+		<div class="row text-center">
+			<div class="col-12">Built by Loc Bui</div>
+			<div class="col-12"><a href="mailto:locbuig@gmail.com">locbuig@gmail.com</a></div>
+		</div>
+	</div>
+</footer>
+
+<a href="#top" class="back-to-top-btn"><i class="fas fa-arrow-up"></i></a>
 </body>
 </html>
 
