--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</li>
 				<li class="nav-item">
 					<button class="resume-btn">
-						<a class="nav-link" href="resume.pdf" target="_blank">Open Resume</a>
+						<a class="nav-link" href="loc-resume.pdf" target="_blank">Open Resume</a>
 					</button>
 				</li>
 			</ul>
@@ -126,37 +126,37 @@
 
 <div class="container-fluid padding">
 	<div class="row about-content">
-		<div class="col-sm-12 col-md-6 col-xl-3">
+		<div class="col-sm-12 col-xl-6">
 			<div class="card">
 				<div class="card-body">
 					<h4 class="card-title">Foodie App</h4>
-					<p class="card-text">Provided engineering and architecture aspects of modern Springboot application</p>
+					<p class="card-text">Delivered engineering and architecture aspects of modern <b>Springboot</b> application.</p>
 					<!-- <a href="#" class="btn btn-outline-secondary">See Profile</a> -->
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-12 col-md-6 col-xl-3">
+		<div class="col-sm-12 col-xl-6">
 			<div class="card">
 				<div class="card-body">
 					<h4 class="card-title">GSTV</h4>
-					<p class="card-text">Provided improved dashboard UI/UX using Javascript, ReactJS-Redux</p>
+					<p class="card-text">Responsible for improvements for dashboard UI/UX using <b>Javascript, ReactJS-Redux</b>.</p>
 					<!-- <a href="#" class="btn btn-outline-secondary">See Profile</a> -->
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-12 col-md-6 col-xl-3">
+		<div class="col-sm-12 col-xl-6">
 			<div class="card">
 				<div class="card-body">
 					<h4 class="card-title">AgendaOrganizer</h4>
-					<p class="card-text">Provided a RESTful APIs using MeteorJS and improved code quality in Javascript.</p>
+					<p class="card-text">Tasked with providing a <b>RESTful APIs</b> using <b>MeteorJS</b> and improved code quality in <b>Javascript, ReactJS</b>.</p>
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-12 col-md-6 col-xl-3">
+		<div class="col-sm-12 col-xl-6">
 			<div class="card">
 				<div class="card-body">
 					<h4 class="card-title">DigitalForm</h4>
-					<p class="card-text">Designed a wireframe using Invision Studio.</p>
+					<p class="card-text">Conceived the design of a wireframe using <b>Invision Studio</b>.</p>
 				</div>
 			</div>
 		</div>
@@ -166,44 +166,58 @@
 <div class="welcome text-center">
 	<hr>
 	<div class="col-12">
-		<h1 class="display-5">Projects</h1>
+		<h1 class="display-5">Personal Projects</h1>
 	</div>
 </div>
 
 <div class="container-fluid padding">
 	<div class="row about-content">
-		<div class="col-md-12 col-lg-6 col-xl-4">
+		<div class="col-md-12 col-xl-6">
 			<div class="card">
 				<!-- <img class="card-img-top" src="img/team1.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">GradTrack</h4>
-					<p class="card-text">Connecting Java with MySQL to create a small database to keep track of graduate students' employment information. This project was a collaborated team effort to structure students' career progress.</p>
-					<!-- <a href="#" class="btn btn-outline-secondary">See Profile</a> -->
+					<p class="card-text">Using high level of <b>ReactJS</b> with <b>Javascript</b> to manipulate UI with dynamic data using MongoDB for organizing the employment information of graduate students.</p>
+					<div class="project-btn">
+						<a href="https://powerful-depths-88007.herokuapp.com/" target="_blank" class="btn btn-outline-secondary">Open Demo</a>
+						<a href="https://github.com/locbuigia/GradTrackWebApp" target="_blank" class="btn btn-outline-secondary">Github Repo</a>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-12 col-lg-6 col-xl-4">
+		<div class="col-md-12 col-xl-6">
+			<div class="card">
+				<!-- <img class="card-img-top" src="img/team1.png"> -->
+				<div class="card-body">
+					<h4 class="card-title">GradTrack</h4>
+					<p class="card-text">Created UI using <b>Java Swing</b> and created a small database using <b>MySQL</b> for organizing the employment information of graduate students.</p>
+					<div class="project-btn">
+						<a href="https://github.com/locbuigia/GradTrack" target="_blank" class="btn btn-outline-secondary">Github Repo</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-12 col-xl-6">
 			<div class="card">
 				<!-- <img class="card-img-top" src="img/team2.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">ParkingApplication</h4>
-					<p class="card-text">Connecting Java with MySQL to create a small
-					database to keep track of parking lot for an organization. This project
-					was also a collaborated team effort.</p>
-					<!-- <a href="#" class="btn btn-outline-secondary">See Profile</a> -->
+					<p class="card-text">This is a collaborative team project connecting <b>Java Swing</b> with <b>MySQL</b> to create a database that kept track of an organization’s parking lot</p>
+					<div class="project-btn">
+						<a href="https://github.com/jnbui94/ParkingApplication" target="_blank" class="btn btn-outline-secondary">Github Repo</a>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col-md-12 col-lg-6 col-xl-4">
+		<div class="col-md-12 col-xl-6">
 			<div class="card">
 				<!-- <img class="card-img-top" src="img/team3.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">OutOfGas</h4>
-					<p class="card-text">The purpose of this application is to help drivers search on
-					nearby gas stations using Global Positioning System (GPS). This program
-					implements the Google Maps API to create the map view for users; and
-					makes calls to a web service to connect to a database. This project was
-					also a collaborated team effort.</p>
+					<p class="card-text">This application was to help drivers search nearby gas stations using <b>GPS</b>. This program implemented the <b>Google Maps API</b> to create a map view for users, and made calls to a web service to connect to a database.</p>
+					<div class="project-btn">
+						<a href="https://github.com/locbuigia/OutOfGas" target="_blank" class="btn btn-outline-secondary">Github Repo</a>
+					</div>
 				</div>
 			</div>
 		</div>
