--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<!-- <img class="card-img-top" src="img/team1.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">GradTrack</h4>
-					<p class="card-text">Using high level of <b>ReactJS</b> with <b>Javascript</b> to manipulate UI with dynamic data using MongoDB for organizing the employment information of graduate students.</p>
+					<p class="card-text">Using high level of <b>ReactJS</b> with <b>Javascript</b> to manipulate UI with dynamic data using <b>MongoDB</b> for organizing the employment information of graduate students.</p>
 					<div class="project-btn">
 						<a href="https://powerful-depths-88007.herokuapp.com/" target="_blank" class="btn btn-outline-secondary">Open Demo</a>
 						<a href="https://github.com/locbuigia/GradTrackWebApp" target="_blank" class="btn btn-outline-secondary">Github Repo</a>
@@ -214,7 +214,7 @@
 				<!-- <img class="card-img-top" src="img/team3.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">OutOfGas</h4>
-					<p class="card-text">This application was to help drivers search nearby gas stations using <b>GPS</b>. This program implemented the <b>Google Maps API</b> to create a map view for users, and made calls to a web service to connect to a database.</p>
+					<p class="card-text">This <b>Android application</b> was to help drivers search nearby gas stations using <b>GPS</b>. This program implemented the <b>Google Maps API</b> to create a map view for users, and made calls to a web service to connect to a database.</p>
 					<div class="project-btn">
 						<a href="https://github.com/locbuigia/OutOfGas" target="_blank" class="btn btn-outline-secondary">Github Repo</a>
 					</div>
