--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <div class="container-fluid padding">
 	<div class="row about-content">
 		<div class="col-md-12 col-xl-6">
-			<div class="card">
+			<div class="card personal-card">
 				<!-- <img class="card-img-top" src="img/team1.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">GradTrack</h4>
@@ -186,7 +186,7 @@
 			</div>
 		</div>
 		<div class="col-md-12 col-xl-6">
-			<div class="card">
+			<div class="card personal-card">
 				<!-- <img class="card-img-top" src="img/team1.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">GradTrack</h4>
@@ -198,7 +198,7 @@
 			</div>
 		</div>
 		<div class="col-md-12 col-xl-6">
-			<div class="card">
+			<div class="card personal-card">
 				<!-- <img class="card-img-top" src="img/team2.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">ParkingApplication</h4>
@@ -210,7 +210,7 @@
 			</div>
 		</div>
 		<div class="col-md-12 col-xl-6">
-			<div class="card">
+			<div class="card personal-card">
 				<!-- <img class="card-img-top" src="img/team3.png"> -->
 				<div class="card-body">
 					<h4 class="card-title">OutOfGas</h4>
